# pandas-mcp-server

./: .env.example  .gitignore  CLAUDE.md  CONFIGURATION.md  LICENSE  README.md  TESTING.md  cli.py  execution.py  matadata_test.py  metadata.py  pyproject.toml  pytest.ini  requirements.txt  server.py  test.py  test2.py  test_execution.py  test_generate_pyecharts.py  test_metadata.py  test_read_metadata.py  try.py  visualization.py
chart_generators/: bar.py  base.py  line.py  pie.py
charts/: chart_1744952689.html  chart_bar_1745857520.html  chart_bar_1745927301.html  chart_bar_1745936186.html
core/: column_interpretation.py  config.py  data_types.py  error_handling.py  execution.py  metadata.py  validation.py  visualization.py
core/chart_generators/: base.py  line.py
core/chart_generators/templates/: line_template.html  pie_template.html
core/charts/: chart_bar_1750415517.html  chart_bar_1750655343.html  chart_bar_1751519556.html  chart_bar_1752027261.html  chart_bar_1752027361.html  chart_bar_1752027448.html  chart_bar_1752027540.html
templates/: barchart_template.html  linechart_template.html  piechart_template.html
tests/: __init__.py  test_config.py  test_error_handling.py  test_execution.py  test_integration.py  test_metadata.py  test_validation.py  test_visualization.py
