[project]
name = "pandas-mcp-server"
version = "0.1.0"
description = "A comprehensive Model Context Protocol (MCP) server that enables LLMs to execute pandas code through a standardized workflow for data analysis and visualization"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "marlonluo2018", email = "marlonluo2018@foxmail.com"}
]
keywords = ["mcp", "pandas", "data-analysis", "visualization", "claude", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=2.0.0",
    "chardet>=5.0.0",
    "fastmcp>=1.0.0",
    "psutil>=5.9.0",
    "openpyxl>=3.0.0",
]

[tool.setuptools]
py-modules = ["server", "cli"]

[tool.setuptools.packages.find]
include = ["core*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
pandas-mcp-server = "server:main"
pandas-mcp-cli = "cli:main"

[project.urls]
Homepage = "https://github.com/marlonluo2018/pandas-mcp-server"
Repository = "https://github.com/marlonluo2018/pandas-mcp-server"
Issues = "https://github.com/marlonluo2018/pandas-mcp-server/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["core"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
